# projects

./: .gitignore  LICENSE  README.md  for.md  pyproject.toml  requirements.txt
bilispy/: __main__.py  barrage.py  search.py
work1/: CMakeLists.txt  main.c
work1/include/: subprocess.h
work2/: CMakeLists.txt  channer.c  sharer.c
work2/src/: subprocess.c
work3/: CMakeLists.txt  main.c
work3/include/: request.h  sharemem.h  terminst.h  ui.h
work3/src/: channels.c  request.c  server.c  sharemem.c  terminst.c
work4/: CMakeLists.txt  chat.py  input.c  login.py  main.c  model.c  run.sh
work4/include/: FindReadline.cmake  channels.h  logo.h.in  request.h  server.h  sharemem.h  terminst.h  ui.h
work4/server/: __main__.py  verapi.py  vercel.py
work4/src/: logo.txt  request.c  server.c  ui.c
